[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:pine/__init__.py]

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude = docs

[tox:tox]
envlist = py37, py38, py39

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39

[testenv]
setenv = PYTHONPATH = {toxinidir}:{toxinidir}/pine
commands = python setup.py test
