[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:pine/__init__.py]

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
max-line-length = 120
exclude = docs

[pytype]
disable =
    pyi-error
    not-supported-yet
